Add Submit AI Tools badge to homepage footer

--- a/index.html
+++ b/index.html
@@ -743,6 +743,7 @@
                 <a href="https://www.showmebest.ai" target="_blank"><img src="https://www.showmebest.ai/badge/feature-badge-white.webp" alt="Featured on ShowMeBestAI" width="220" height="60"></a>
                 <a href="https://toolpilot.ai" target="_blank" rel="noopener noreferrer"><img src="https://www.toolpilot.ai/cdn/shop/files/f-w_690x151_crop_center.png" alt="Powered by ToolPilot.ai" height="60"></a>
                 <a href="https://startupfa.me/s/forge-calculator.com-587?utm_source=forge-calculator.com" target="_blank"><img src="https://startupfa.me/badges/featured-badge-small.webp" alt="forge calculator - Featured on Startup Fame" width="224" height="36" /></a>
+                <a href="https://submitaitools.org" target="_blank" ><img src="https://submitaitools.org/static_submitaitools/images/submitaitools.png" alt="Submit AI Tools – The ultimate platform to discover, submit, and explore the best AI tools across various categories." style="border-radius: 10px; width: 200px; height: 60px;" /></a>
             </p>
         </div>
     </footer>
