Add Stone ore detailed guide page
- Create comprehensive stone.html as ore-guide subpage
- Add detailed Stone ore statistics and game information
- Include step-by-step mining guide for Stonewake's Cross
- Add crafting uses and beginner tips
- Update ore-guide.html with Stone page links
- Update sitemap.xml with new stone.html entry
- Update LLM files with Stone guide reference

--- a/ore-guide.html
+++ b/ore-guide.html
@@ -461,7 +461,7 @@
                     <tbody>
                         <!-- Common Ores -->
                         <tr>
-                            <td class="ore-name">Stone</td>
+                            <td class="ore-name"><a href="/stone.html" style="color: #ff5722; text-decoration: none; font-weight: bold;">Stone</a></td>
                             <td class="rarity-common">Common</td>
                             <td>1/1</td>
                             <td>0.2x</td>
@@ -945,7 +945,7 @@
 
             <h4 style="color: #ff5722; margin-top: 1.5rem;">Rock Types & What They Contain:</h4>
             <ul>
-                <li><strong>Pebble:</strong> Stone, Sand Stone, Copper, Iron, Poopite</li>
+                <li><strong>Pebble:</strong> <a href="/stone.html" style="color: #ff5722; text-decoration: none;">Stone</a>, Sand Stone, Copper, Iron, Poopite</li>
                 <li><strong>Rock:</strong> Sand Stone, Copper, Iron, Tin, Silver, Mushroomite, Bananite, Cardboardite</li>
                 <li><strong>Boulder:</strong> Copper, Iron, Tin, Silver, Gold, Mushroomite, Bananite, Cardboardite, Aite, Poopite</li>
                 <li><strong>Basalt Rock:</strong> Silver, Gold, Platinum</li>
@@ -960,7 +960,7 @@
             <h4 style="color: #ff5722;">Mining Rocks:</h4>
             <p>The primary method to gather ores. Mine different rock types to find various ores:</p>
             <ul>
-                <li><strong>Pebble:</strong> Easiest to mine, contains common ores like Stone, Copper, and Iron</li>
+                <li><strong>Pebble:</strong> Easiest to mine, contains common ores like <a href="/stone.html" style="color: #ff5722; text-decoration: none;">Stone</a>, Copper, and Iron</li>
                 <li><strong>Rock:</strong> Medium difficulty, good variety including Tin, Silver, and Mushroomite</li>
                 <li><strong>Boulder:</strong> Harder to mine, best chance for rare ores like Gold, Platinum, and Aite</li>
                 <li><strong>Basalt Rock:</strong> Special rock type with Silver, Gold, and Platinum</li>
@@ -982,7 +982,7 @@
             
             <h4 style="color: #ff5722; margin-top: 1.5rem;">Common Ores - Great for Beginners:</h4>
             <ul>
-                <li><strong>Stone:</strong> The most basic material - it's literally just a rock</li>
+                <li><strong><a href="/stone.html" style="color: #ff5722; text-decoration: none;">Stone</a>:</strong> The most basic material - it's literally just a rock</li>
                 <li><strong>Sand Stone:</strong> Crumbly but buildable, not water-resistant</li>
                 <li><strong>Copper:</strong> Reliable starter material for basic crafting</li>
                 <li><strong>Iron:</strong> The workhorse of the forge - versatile and dependable</li>
