Update heading hierarchy across pages for better SEO
- ore-guide.html: Changed all h3 to h2, updated ore-card headings
- armor.html: Changed all h3 to h2, all h4 to h3
- codes.html: Changed FAQ section to h2, FAQ questions to h3
- stone.html: Moved 'How to Get Stone Ore' section to top, before statistics

All pages now follow proper h1→h2→h3→h4 hierarchy for improved SEO structure

--- a/enemies.html
+++ b/enemies.html
@@ -50,6 +50,7 @@
                 <a href="/">Calculator</a>
                 <a href="/wiki.html">Wiki</a>
                 <a href="/weapons.html">Weapons</a>
+                <a href="/armor.html">Armor</a>
                 <a href="/codes.html">Codes</a>
                 <a href="/races.html">Races</a>
                 <a href="/npcs.html">NPCs</a>
