--- a/feedback.html
+++ b/feedback.html
@@ -336,6 +336,7 @@
                 <a href="/wiki.html">Wiki</a>
                 <a href="/ore-guide.html">Ores</a>
                 <a href="/weapons.html">Weapons</a>
+                <a href="/armor.html">Armor</a>
                 <a href="/codes.html">Codes</a>
             </nav>
         </div>
