--- a/blog-mastering-the-forge.html
+++ b/blog-mastering-the-forge.html
@@ -323,6 +323,7 @@
                 <a href="/wiki.html">Wiki</a>
                 <a href="/ore-guide.html">Ores</a>
                 <a href="/weapons.html">Weapons</a>
+                <a href="/armor.html">Armor</a>
                 <a href="/codes.html">Codes</a>
                 <a href="/recipes.html">Recipes</a>
                 <a href="/feedback.html">Feedback</a>
