--- a/races.html
+++ b/races.html
@@ -56,6 +56,7 @@
                 <a href="/">Calculator</a>
                 <a href="/wiki.html">Wiki</a>
                 <a href="/weapons.html">Weapons</a>
+                <a href="/armor.html">Armor</a>
                 <a href="/codes.html">Codes</a>
                 <a href="/enemies.html">Enemies</a>
                 <a href="/npcs.html">NPCs</a>
