Complete gamepass page integration
- Created comprehensive gamepass.html with purchase recommendations
- Added gamepass information from images (cash packs, totems, pricing)
- Removed BEST GAMEPASSES section from wiki.html
- Added gamepass card to Browse by Category in wiki.html
- Updated sitemap.xml with gamepass.html entry
- Updated llms.txt and llms-full.txt with gamepass page references
- Integrated complete gamepass guide with strategic purchase order

--- a/ore-guide.html
+++ b/ore-guide.html
@@ -720,7 +720,7 @@
                             <td>Dangerous, unstable, and glowing green.</td>
                         </tr>
                         <tr>
-                            <td class="ore-name">Mythril</td>
+                            <td class="ore-name"><a href="/mythril.html" style="color: #ff5722; text-decoration: none; font-weight: bold;">Mythril</a></td>
                             <td class="rarity-legendary">Legendary</td>
                             <td>1/813</td>
                             <td>3.5x</td>
