Fix duplicate pages issue and add detailed rune stats
- Add canonical tags to all HTML pages to resolve duplicate content issues
- Convert recipe-database-ui.html from fragment to complete HTML page
- Add comprehensive rune statistics table with all trait data (by ravu)
- Update sitemap.xml with newly fixed pages
- Add submission guide and automated submission script
- Improve SEO with proper meta descriptions and keywords

--- a/races.html
+++ b/races.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚒️</text></svg>">
     <meta name="description" content="Complete guide to all 13 races in The Forge - Learn about race abilities, stats, and which race is best for your playstyle.">
+    <meta name="keywords" content="the forge races, forge race guide, best race forge, race abilities, race stats, roblox forge races">
+    <link rel="canonical" href="https://forge-calculator.com/races.html">
     <title>The Forge Races Guide - All 13 Races & Abilities</title>
     <link rel="stylesheet" href="forge-theme.css">
     <style>
