--- a/recipe-database-ui.html
+++ b/recipe-database-ui.html
@@ -1,5 +1,17 @@
-<!-- recipe-database-ui.html -->
-<div class="recipe-database-container">
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚒️</text></svg>">
+    <meta name="description" content="The Forge Recipe Database UI - Interactive interface for browsing and managing crafting recipes">
+    <meta name="keywords" content="forge recipe database, recipe ui, forge crafting interface, recipe management">
+    <link rel="canonical" href="https://forge-calculator.com/recipe-database-ui.html">
+    <title>Recipe Database UI - The Forge Calculator</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
+<body>
+    <div class="recipe-database-container"></div>
     <div class="database-header">
         <h2><i class="fas fa-book"></i> 锻造配方数据库</h2>
         <div class="search-controls">
@@ -782,3 +794,6 @@ class RecipeDatabaseUI {
 // 初始化
 const recipeDBUI = new RecipeDatabaseUI();
 </script>
+    </div>
+</body>
+</html>
