--- a/blog-introducing-calculator-print.html
+++ b/blog-introducing-calculator-print.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Printable version of Introducing Roblox The Forge Calculator blog post">
+    <link rel="canonical" href="https://forge-calculator.com/blog-introducing-calculator-print.html">
     <title>Introducing Roblox The Forge Calculator</title>
     <style>
         @media print {
