--- a/enemies.html
+++ b/enemies.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚒️</text></svg>">
     <meta name="description" content="Complete guide to all enemies in The Forge - Learn about Zombies, Skeletons, Hell Skeletons, and combat strategies.">
+    <meta name="keywords" content="the forge enemies, forge combat guide, zombies, skeletons, hell skeletons, forge enemy types">
+    <link rel="canonical" href="https://forge-calculator.com/enemies.html">
     <title>The Forge Enemies Guide - Combat & Enemy Types</title>
     <link rel="stylesheet" href="forge-theme.css">
     <style>
