--- a/generate-recipes.html
+++ b/generate-recipes.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Recipe Database Generator for The Forge - Internal tool for generating recipe data">
+    <link rel="canonical" href="https://forge-calculator.com/generate-recipes.html">
     <title>Generate Recipe Database</title>
 </head>
 <body>
