--- a/npcs.html
+++ b/npcs.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚒️</text></svg>">
     <meta name="description" content="Complete guide to all NPCs in The Forge - Meet Sensei Moro, Marbles, Miner Fred, Maria, and other helpful characters.">
+    <meta name="keywords" content="the forge npcs, forge characters, sensei moro, marbles, miner fred, maria, forge npc guide">
+    <link rel="canonical" href="https://forge-calculator.com/npcs.html">
     <title>The Forge NPCs Guide - All Characters & Services</title>
     <link rel="stylesheet" href="forge-theme.css">
     <style>
