--- a/recipe-viewer.html
+++ b/recipe-viewer.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The Forge Recipe Database Viewer - Browse and search all crafting recipes for The Forge Roblox game">
+    <link rel="canonical" href="https://forge-calculator.com/recipe-viewer.html">
     <title>The Forge Recipe Database Viewer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
