Fix AI-generated content and add best recipes page
- Remove speculative location info from stone.html and mythril.html
- Fix AI-generated farming strategies and timing suggestions
- Create new best-recipes.html page with verified recipe data
- Add SaaS Field badge to homepage footer
- Update sitemap.xml with new best recipes page
- Ensure all content is based on confirmed game mechanics only

--- a/generate-recipes.html
+++ b/generate-recipes.html
@@ -6,6 +6,10 @@
     <meta name="description" content="Recipe Database Generator for The Forge - Internal tool for generating recipe data">
     <link rel="canonical" href="https://forge-calculator.com/generate-recipes.html">
     <title>Generate Recipe Database</title>
+    
+    <!-- START: Advertisement Code - Remove if needed -->
+    <script type="text/javascript" src="https://pl28242376.effectivegatecpm.com/98/46/92/9846923cf7caa65af508e71858f9f891.js"></script>
+    <!-- END: Advertisement Code -->
 </head>
 <body>
     <h1>Recipe Database Generator</h1>
