--- a/index.html
+++ b/index.html
@@ -561,6 +561,10 @@
     
     <!-- Ahrefs Analytics -->
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="EpsJtUp2VOHq8C8Dwkg1zQ" async></script>
+    
+    <!-- START: Advertisement Code - Remove if needed -->
+    <script type="text/javascript" src="https://pl28242376.effectivegatecpm.com/98/46/92/9846923cf7caa65af508e71858f9f891.js"></script>
+    <!-- END: Advertisement Code -->
 </head>
 <body>
     <!-- Header -->
@@ -755,6 +759,7 @@
                 <a href="https://twelve.tools" target="_blank"><img src="https://twelve.tools/badge0-white.svg" alt="Featured on Twelve Tools" width="200" height="54"></a>
                 <a href="https://turbo0.com/item/forge-calculator" target="_blank" rel="noopener noreferrer"><img src="https://img.turbo0.com/badge-listed-light.svg" alt="Listed on Turbo0" style="height: 54px; width: auto;" /></a>
                 <a href="https://starterbest.com" target="_blank" rel="noopener noreferrer"><img src="https://starterbest.com/badages-awards.svg" alt="Featured on Starter Best" style="height: 54px; width: auto;"/></a>
+                <a target="_blank" href="https://saasfield.com"><img src="https://saasfield.com/assets/images/badge.png" alt="SaaS Field" height="54"></a>
             </p>
         </div>
     </footer>
