--- a/races.html
+++ b/races.html
@@ -8,6 +8,11 @@
     <meta name="keywords" content="the forge races, forge race guide, best race forge, race abilities, race stats, roblox forge races">
     <link rel="canonical" href="https://forge-calculator.com/races.html">
     <title>The Forge Races Guide - All 13 Races & Abilities</title>
+    
+    <!-- START: Advertisement Code - Remove if needed -->
+    <script type="text/javascript" src="https://pl28242376.effectivegatecpm.com/98/46/92/9846923cf7caa65af508e71858f9f891.js"></script>
+    <!-- END: Advertisement Code -->
+    
     <link rel="stylesheet" href="forge-theme.css">
     <style>
         body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; line-height: 1.6; color: #333; background: linear-gradient(135deg, #1a1a1a 0%, #263238 100%); min-height: 100vh; margin: 0; padding: 0; }
