--- a/recipe-database-ui.html
+++ b/recipe-database-ui.html
@@ -8,6 +8,11 @@
     <meta name="keywords" content="forge recipe database, recipe ui, forge crafting interface, recipe management">
     <link rel="canonical" href="https://forge-calculator.com/recipe-database-ui.html">
     <title>Recipe Database UI - The Forge Calculator</title>
+    
+    <!-- START: Advertisement Code - Remove if needed -->
+    <script type="text/javascript" src="https://pl28242376.effectivegatecpm.com/98/46/92/9846923cf7caa65af508e71858f9f891.js"></script>
+    <!-- END: Advertisement Code -->
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
