--- a/recipe-viewer.html
+++ b/recipe-viewer.html
@@ -6,6 +6,11 @@
     <meta name="description" content="The Forge Recipe Database Viewer - Browse and search all crafting recipes for The Forge Roblox game">
     <link rel="canonical" href="https://forge-calculator.com/recipe-viewer.html">
     <title>The Forge Recipe Database Viewer</title>
+    
+    <!-- START: Advertisement Code - Remove if needed -->
+    <script type="text/javascript" src="https://pl28242376.effectivegatecpm.com/98/46/92/9846923cf7caa65af508e71858f9f891.js"></script>
+    <!-- END: Advertisement Code -->
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
