--- a/blog-introducing-calculator-print.html
+++ b/blog-introducing-calculator-print.html
@@ -6,6 +6,11 @@
     <meta name="description" content="Printable version of Introducing Roblox The Forge Calculator blog post">
     <link rel="canonical" href="https://forge-calculator.com/blog-introducing-calculator-print.html">
     <title>Introducing Roblox The Forge Calculator</title>
+    
+    <!-- START: Advertisement Code - Remove if needed -->
+    <script type="text/javascript" src="https://pl28242376.effectivegatecpm.com/98/46/92/9846923cf7caa65af508e71858f9f891.js"></script>
+    <!-- END: Advertisement Code -->
+    
     <style>
         @media print {
             body {
