--- a/blog-introducing-calculator.html
+++ b/blog-introducing-calculator.html
@@ -8,6 +8,11 @@
     <meta name="keywords" content="forge calculator, roblox forge, the forge calculator, forge guide">
     <link rel="canonical" href="https://forge-calculator.com/blog-introducing-calculator.html">
     <title>Introducing The Forge Calculator - Blog</title>
+    
+    <!-- START: Advertisement Code - Remove if needed -->
+    <script type="text/javascript" src="https://pl28242376.effectivegatecpm.com/98/46/92/9846923cf7caa65af508e71858f9f891.js"></script>
+    <!-- END: Advertisement Code -->
+    
     <style>
         * {
             margin: 0;
