--- a/feedback.html
+++ b/feedback.html
@@ -325,6 +325,10 @@
     
     <!-- EmailJS SDK -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    
+    <!-- START: Advertisement Code - Remove if needed -->
+    <script type="text/javascript" src="https://pl28242376.effectivegatecpm.com/98/46/92/9846923cf7caa65af508e71858f9f891.js"></script>
+    <!-- END: Advertisement Code -->
 </head>
 <body>
     <header>
