--- a/runes.html
+++ b/runes.html
@@ -356,6 +356,10 @@
     
     <!-- Ahrefs Analytics -->
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="EpsJtUp2VOHq8C8Dwkg1zQ" async></script>
+    
+    <!-- START: Advertisement Code - Remove if needed -->
+    <script type="text/javascript" src="https://pl28242376.effectivegatecpm.com/98/46/92/9846923cf7caa65af508e71858f9f891.js"></script>
+    <!-- END: Advertisement Code -->
 </head>
 <body>
     <header>
