Add Power Up Tools badge and fix remaining speculative content
- Add Power Up Tools badge to homepage footer
- Remove speculative armor stat information
- Fix remaining AI-generated content in multiple pages
- Ensure all content is based on verified game mechanics

--- a/armor.html
+++ b/armor.html
@@ -116,7 +116,7 @@
                 <div style="background: linear-gradient(135deg, #e8f5e9 0%, #c8e6c9 100%); padding: 1.5rem; border-radius: 12px; border-left: 4px solid #4caf50;">
                     <h3 style="color: #2e7d32; margin-bottom: 0.5rem;">💚 Health</h3>
                     <p style="color: #555;">Health is the percentage bonus added to your base HP. If a piece shows <strong>5% Health</strong>, your total base health is boosted by 5% while worn.</p>
-                    <p style="color: #666; font-size: 0.9rem; margin-top: 0.5rem;">💡 Pieces that usually roll more Health (best → worst): <strong>Helmet</strong>, <strong>Leggings</strong>, then <strong>Chestplate</strong>.</p>
+                    <p style="color: #666; font-size: 0.9rem; margin-top: 0.5rem;">💡 Different armor pieces may have varying health bonus ranges.</p>
                 </div>
 
                 <div style="background: linear-gradient(135deg, #fff3e0 0%, #ffe0b2 100%); padding: 1.5rem; border-radius: 12px; border-left: 4px solid #ff9800;">
@@ -298,11 +298,11 @@
 
         <!-- Tips -->
         <div class="content-section">
-            <h2>💡 Armor Tips & Strategies</h2>
+            <h2>💡 Armor Information</h2>
             <ul style="line-height: 1.8; color: #555;">
-                <li><strong>Tank Builds:</strong> Focus on Heavy Armor (Knight/Dark Knight sets) for maximum survivability</li>
-                <li><strong>Balanced Builds:</strong> Mix Medium Armor pieces for good protection without sacrificing too much mobility</li>
-                <li><strong>Profit Farming:</strong> Light Armor has lower base prices but is easier to craft in bulk</li>
+                <li><strong>Heavy Armor:</strong> Provides maximum health bonuses (+12.5-25%)</li>
+                <li><strong>Medium Armor:</strong> Balanced protection with moderate health bonuses (+6.25-12.75%)</li>
+                <li><strong>Light Armor:</strong> Basic protection with lower health bonuses (+3.75-5%)</li>
                 <li><strong>Rare Pieces:</strong> Samurai and Dark Knight pieces have 1/2 chance - harder to get but offer better stats</li>
                 <li><strong>Full Sets:</strong> Wearing matching helmet, chestplate, and leggings may provide set bonuses</li>
                 <li><strong>Ore Selection:</strong> Use our <a href="/" style="color: #ff5722; font-weight: 600;">Calculator</a> to find the best ore combinations for your desired armor</li>
