--- a/blog-mastering-the-forge.html
+++ b/blog-mastering-the-forge.html
@@ -455,7 +455,7 @@
                     <li>Start planning your legendary build</li>
                 </ul>
 
-                <p><strong>Advanced Strategy:</strong> Use the calculator to find "sweet spots" where multiple traits activate simultaneously. For example, 30% Gem + 30% Shadow + 25% Iron + 15% Gold activates Legendary, Critical Hit, and Durability traits.</p>
+                <p><strong>Advanced Tip:</strong> Use the calculator to experiment with different ore combinations and see which traits activate. Different ore percentages will produce different results.</p>
             </div>
 
             <div class="progression-stage">
