--- a/gamepass.html
+++ b/gamepass.html
@@ -578,7 +578,7 @@
                 <ul style="color: #555; margin: 0;">
                     <li><strong>Best Value:</strong> Larger packs offer better gold-per-Robux ratios</li>
                     <li><strong>Strategic Use:</strong> Use gold to buy better pickaxes and equipment early</li>
-                    <li><strong>Timing:</strong> Consider purchasing during special events for bonus rewards</li>
+                    <li><strong>Events:</strong> Special events may offer bonus rewards</li>
                 </ul>
             </div>
         </div>
@@ -640,7 +640,7 @@
                 <ul style="color: #555; margin: 0;">
                     <li><strong>Best Value:</strong> Buy 3-packs for better pricing (save ~30% per totem)</li>
                     <li><strong>Stacking:</strong> Multiple totems can be used simultaneously for maximum effect</li>
-                    <li><strong>Timing:</strong> Use during dedicated farming sessions for maximum efficiency</li>
+                    <li><strong>Usage:</strong> Most effective during active farming sessions</li>
                     <li><strong>Popular Combos:</strong> Luck + Miner totems for ore farming, XP + Warrior for combat</li>
                 </ul>
             </div>
