--- a/mythril.html
+++ b/mythril.html
@@ -728,8 +728,8 @@
                 </div>
                 
                 <div style="background: linear-gradient(135deg, #e3f2fd 0%, #bbdefb 100%); padding: 1.5rem; border-radius: 10px; border-left: 4px solid #2196f3;">
-                    <h3 style="color: #0d47a1; margin-bottom: 0.5rem;">💰 Market Strategy</h3>
-                    <p>Mythril's rarity makes it valuable for trading. Consider market timing and demand before selling or using.</p>
+                    <h3 style="color: #0d47a1; margin-bottom: 0.5rem;">💰 Value Information</h3>
+                    <p>Mythril is a rare ore with high value due to its 1/813 drop rate and 3.5x multiplier.</p>
                 </div>
                 
                 <div style="background: linear-gradient(135deg, #e8f5e8 0%, #c8e6c9 100%); padding: 1.5rem; border-radius: 10px; border-left: 4px solid #4caf50;">
