--- a/weapons.html
+++ b/weapons.html
@@ -645,7 +645,7 @@
                             <td style="padding: 1rem; text-align: center;">8 Studs</td>
                             <td style="padding: 1rem; text-align: center;">84$</td>
                             <td style="padding: 1rem; text-align: center;">1/2</td>
-                            <td style="padding: 1rem;">The most deadly sword according to experts during the Roman Empire.</td>
+                            <td style="padding: 1rem;">A powerful sword type in The Forge with high damage potential.</td>
                         </tr>
                         <tr style="border-bottom: 1px solid #eee;">
                             <td style="padding: 1rem; font-weight: bold;">Cutlass</td>
