--- a/recipes.html
+++ b/recipes.html
@@ -364,6 +364,35 @@
             <p>Discover the best Forge recipes for legendary weapons and armor. Browse our complete collection of The Forge recipes including beginner Forge recipes, intermediate Forge recipes, advanced Forge recipes, and legendary Forge recipes. All The Forge recipes are verified and tested by our community.</p>
         </div>
 
+        <!-- Best Recipes Entry Point -->
+        <div style="background: linear-gradient(135deg, #4caf50 0%, #2e7d32 100%); border-radius: 20px; padding: 2.5rem; margin-bottom: 2rem; box-shadow: 0 10px 40px rgba(76, 175, 80, 0.3); border: 2px solid #4caf50; text-align: center;">
+            <h2 style="color: #fff; font-size: 2.2rem; margin-bottom: 1rem; font-weight: 700; text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);">
+                🏆 Best Recipes for The Forge
+            </h2>
+            <p style="color: #e8f5e8; font-size: 1.2rem; margin-bottom: 2rem; line-height: 1.6;">
+                Discover the top-rated weapon and armor recipes with highest success rates and proven results. Get the best DPS combinations and optimal ore usage for every game stage.
+            </p>
+            
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1.5rem; margin-bottom: 2rem;">
+                <div style="background: rgba(255, 255, 255, 0.15); border-radius: 12px; padding: 1.5rem; backdrop-filter: blur(10px);">
+                    <h3 style="color: #fff; margin-bottom: 0.5rem; font-size: 1.1rem;">⚔️ Best Weapon Recipes</h3>
+                    <p style="color: #e8f5e8; font-size: 0.95rem; margin: 0;">Colossal Sword, Katana, Straight Sword with exact DPS values</p>
+                </div>
+                <div style="background: rgba(255, 255, 255, 0.15); border-radius: 12px; padding: 1.5rem; backdrop-filter: blur(10px);">
+                    <h3 style="color: #fff; margin-bottom: 0.5rem; font-size: 1.1rem;">🛡️ Best Armor Recipes</h3>
+                    <p style="color: #e8f5e8; font-size: 0.95rem; margin: 0;">Light, Medium, Heavy armor with optimal protection</p>
+                </div>
+                <div style="background: rgba(255, 255, 255, 0.15); border-radius: 12px; padding: 1.5rem; backdrop-filter: blur(10px);">
+                    <h3 style="color: #fff; margin-bottom: 0.5rem; font-size: 1.1rem;">📊 Game Stage Guide</h3>
+                    <p style="color: #e8f5e8; font-size: 0.95rem; margin: 0;">Endgame, Lategame, Midgame, Earlygame progression</p>
+                </div>
+            </div>
+            
+            <a href="/best-recipes.html" style="display: inline-block; background: #fff; color: #2e7d32; padding: 1.2rem 2.5rem; border-radius: 12px; text-decoration: none; font-weight: bold; font-size: 1.1rem; transition: all 0.3s; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);">
+                🏆 View Best Recipes →
+            </a>
+        </div>
+
         <!-- Weapon Crafting Guide Table -->
         <div class="content-section" style="background: #fff; border-radius: 20px; padding: 2.5rem; margin-bottom: 2rem;">
             <h2>⚔️ The Forge Weapon Recipes</h2>
