Major site restructure: organize content into logical folders
- Restructure file organization:
  * /recipes/ - all recipe-related pages (recipes, best-recipes, generate-recipes, etc.)
  * /ore/ - all ore-related pages (ore-guide, stone, mythril)
  * /wiki/ - all wiki pages (enemies, gamepass, npcs, races, runes)
  * /blog/ - all blog articles (mastering-the-forge, introducing-calculator, etc.)

- Update all internal links and navigation
- Update sitemap.xml with new URL structure
- Add comprehensive Russian content to llms.txt and llms-full.txt
- Update robots.txt with Russian content guidelines
- Add best recipes content to LLM files
- Improve SEO with better URL hierarchy

This restructure provides:
- Better user experience with logical content organization
- Improved SEO with hierarchical URLs
- Enhanced support for Russian users (33% of traffic)
- Cleaner navigation and breadcrumbs

--- a/codes.html
+++ b/codes.html
@@ -322,10 +322,10 @@
         <div class="container">
             <h1>⚒️ The Forge Codes - December 2025</h1>
             <nav>
-                <a href="/recipes.html">Recipes</a>
+                <a href="/recipes/">Recipes</a>
                 <a href="/">Calculator</a>
-                <a href="/wiki.html">Wiki</a>
-                <a href="/ore-guide.html">Ores</a>
+                <a href="/wiki/">Wiki</a>
+                <a href="/ore/">Ores</a>
                 <a href="/weapons.html">Weapons</a>
                 <a href="/armor.html">Armor</a>
                 <a href="/feedback.html">Feedback</a>
@@ -671,7 +671,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
-            <p><a href="/">Home</a> | <a href="/blog.html">Blog</a> | <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-service.html">Terms of Service</a></p>
+            <p><a href="/">Home</a> | <a href="/blog/">Blog</a> | <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-service.html">Terms of Service</a></p>
         </div>
     </footer>
 
