--- a/index.html
+++ b/index.html
@@ -572,9 +572,9 @@
         <div class="container">
             <h1>⚒️ Forge Calculator</h1>
             <nav>
-                <a href="/recipes.html">Recipes</a>
-                <a href="/wiki.html">Wiki</a>
-                <a href="/ore-guide.html">Ores</a>
+                <a href="/recipes/">Recipes</a>
+                <a href="/wiki/">Wiki</a>
+                <a href="/ore/">Ores</a>
                 <a href="/weapons.html">Weapons</a>
                 <a href="/armor.html">Armor</a>
                 <a href="/codes.html">Codes</a>
@@ -748,7 +748,7 @@
         <div class="container">
             <p>&copy; 2025 Forge Calculator. Created for The Forge community on Roblox.</p>
             <p>This forge calculator is a fan-made tool and is not officially affiliated with Roblox or The Forge game developers.</p>
-            <p><a href="/codes.html">Codes</a> | <a href="/blog.html">Blog</a> | <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-service.html">Terms of Service</a> | <a href="https://ovk.to/id34926" target="_blank">OVK</a> | <a href="https://cal.com/lainey-tpyuqi" target="_blank" rel="noopener noreferrer">Schedule a Call</a></p>
+            <p><a href="/codes.html">Codes</a> | <a href="/blog/">Blog</a> | <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-service.html">Terms of Service</a> | <a href="https://ovk.to/id34926" target="_blank">OVK</a> | <a href="https://cal.com/lainey-tpyuqi" target="_blank" rel="noopener noreferrer">Schedule a Call</a></p>
             <p>Powered by <a href="https://aistage.net" title="AIStage">AIStage</a></p>
             <p>
                 <a target="_blank" href="https://goodaitools.com"><img src="https://goodaitools.com/assets/images/badge.png" alt="Good AI Tools" height="54"></a>
