--- a/recipes/generate-recipes.html
+++ b/recipes/generate-recipes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Recipe Database Generator for The Forge - Internal tool for generating recipe data">
-    <link rel="canonical" href="https://forge-calculator.com/generate-recipes.html">
+    <link rel="canonical" href="https://forge-calculator.com/recipes/generate-recipes.html">
     <title>Generate Recipe Database</title>
     
     <!-- START: Advertisement Code - Remove if needed -->
