--- a/recipes/recipe-database-ui.html
+++ b/recipes/recipe-database-ui.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚒️</text></svg>">
     <meta name="description" content="The Forge Recipe Database UI - Interactive interface for browsing and managing crafting recipes">
     <meta name="keywords" content="forge recipe database, recipe ui, forge crafting interface, recipe management">
-    <link rel="canonical" href="https://forge-calculator.com/recipe-database-ui.html">
+    <link rel="canonical" href="https://forge-calculator.com/recipes/recipe-database-ui.html">
     <title>Recipe Database UI - The Forge Calculator</title>
     
     <!-- START: Advertisement Code - Remove if needed -->
