--- a/weapons.html
+++ b/weapons.html
@@ -408,12 +408,12 @@
         <div class="container">
             <h1>⚔️ The Forge Weapons</h1>
             <nav>
-                <a href="/recipes.html">Recipes</a>
+                <a href="/recipes/">Recipes</a>
                 <a href="/">Calculator</a>
-                <a href="/wiki.html">Wiki</a>
+                <a href="/wiki/">Wiki</a>
                 <a href="/armor.html">Armor</a>
                 <a href="/codes.html">Codes</a>
-                <a href="/ore-guide.html">Ores</a>
+                <a href="/ore/">Ores</a>
             </nav>
         </div>
     </header>
@@ -875,7 +875,7 @@
             <h3>🔥 Ready to Craft Your Weapon?</h3>
             <p style="margin-bottom: 1.5rem;">Use our calculator to plan your ore combinations and create the perfect weapon!</p>
             <a href="/" class="cta-btn">⚒️ Try Calculator</a>
-            <a href="/ore-guide.html" class="cta-btn">🪨 Ore Guide</a>
+            <a href="/ore/" class="cta-btn">🪨 Ore Guide</a>
             <a href="/codes.html" class="cta-btn">🎁 Get Free Ores</a>
         </div>
 
@@ -906,7 +906,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
-            <p><a href="/">Home</a> | <a href="/wiki.html">Wiki</a> | <a href="/weapons.html">Weapons</a> | <a href="/codes.html">Codes</a> | <a href="/privacy-policy.html">Privacy</a> | <a href="/terms-of-service.html">Terms</a></p>
+            <p><a href="/">Home</a> | <a href="/wiki/">Wiki</a> | <a href="/weapons.html">Weapons</a> | <a href="/codes.html">Codes</a> | <a href="/privacy-policy.html">Privacy</a> | <a href="/terms-of-service.html">Terms</a></p>
         </div>
     </footer>    <!-- Advertisement -->
     <script type="text/javascript" src="//pl28203408.effectivegatecpm.com/33/6d/20/336d201ce818c2f17706b3912bfe9895.js"></script>
