--- a/armor.html
+++ b/armor.html
@@ -75,13 +75,13 @@
         <div class="container">
             <h1>🛡️ The Forge Armor</h1>
             <nav>
-                <a href="/recipes.html">Recipes</a>
+                <a href="/recipes/">Recipes</a>
                 <a href="/">Calculator</a>
-                <a href="/wiki.html">Wiki</a>
+                <a href="/wiki/">Wiki</a>
                 <a href="/weapons.html">Weapons</a>
                 <a href="/armor.html">Armor</a>
                 <a href="/codes.html">Codes</a>
-                <a href="/ore-guide.html">Ores</a>
+                <a href="/ore/">Ores</a>
             </nav>
         </div>
     </header>
@@ -325,7 +325,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
-            <p><a href="/">Home</a> | <a href="/wiki.html">Wiki</a> | <a href="/codes.html">Codes</a> | <a href="/privacy-policy.html">Privacy</a></p>
+            <p><a href="/">Home</a> | <a href="/wiki/">Wiki</a> | <a href="/codes.html">Codes</a> | <a href="/privacy-policy.html">Privacy</a></p>
         </div>
     </footer>    <!-- Advertisement -->
     <script type="text/javascript" src="//pl28203408.effectivegatecpm.com/33/6d/20/336d201ce818c2f17706b3912bfe9895.js"></script>
