--- a/feedback.html
+++ b/feedback.html
@@ -335,10 +335,10 @@
         <div class="container">
             <h1>💬 Feedback</h1>
             <nav>
-                <a href="/recipes.html">Recipes</a>
+                <a href="/recipes/">Recipes</a>
                 <a href="/">Calculator</a>
-                <a href="/wiki.html">Wiki</a>
-                <a href="/ore-guide.html">Ores</a>
+                <a href="/wiki/">Wiki</a>
+                <a href="/ore/">Ores</a>
                 <a href="/weapons.html">Weapons</a>
                 <a href="/armor.html">Armor</a>
                 <a href="/codes.html">Codes</a>
@@ -451,7 +451,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
-            <p><a href="/">Home</a> | <a href="/wiki.html">Wiki</a> | <a href="/blog.html">Blog</a> | <a href="/feedback.html">Feedback</a></p>
+            <p><a href="/">Home</a> | <a href="/wiki/">Wiki</a> | <a href="/blog/">Blog</a> | <a href="/feedback.html">Feedback</a></p>
         </div>
     </footer>
 
