--- a/recipes/recipe-viewer.html
+++ b/recipes/recipe-viewer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The Forge Recipe Database Viewer - Browse and search all crafting recipes for The Forge Roblox game">
-    <link rel="canonical" href="https://forge-calculator.com/recipe-viewer.html">
+    <link rel="canonical" href="https://forge-calculator.com/recipes/recipe-viewer.html">
     <title>The Forge Recipe Database Viewer</title>
     
     <!-- START: Advertisement Code - Remove if needed -->
