--- a/wiki/npcs.html
+++ b/wiki/npcs.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚒️</text></svg>">
     <meta name="description" content="Complete guide to all NPCs in The Forge - Meet Sensei Moro, Marbles, Miner Fred, Maria, and other helpful characters.">
     <meta name="keywords" content="the forge npcs, forge characters, sensei moro, marbles, miner fred, maria, forge npc guide">
-    <link rel="canonical" href="https://forge-calculator.com/npcs.html">
+    <link rel="canonical" href="https://forge-calculator.com/wiki/npcs.html">
     <title>The Forge NPCs Guide - All Characters & Services</title>
     
     <!-- START: Advertisement Code - Remove if needed -->
@@ -53,9 +53,9 @@
         <div class="container">
             <h1>🧙 The Forge NPCs</h1>
             <nav>
-                <a href="/recipes.html">Recipes</a>
+                <a href="/recipes/">Recipes</a>
                 <a href="/">Calculator</a>
-                <a href="/wiki.html">Wiki</a>
+                <a href="./">Wiki</a>
                 <a href="/weapons.html">Weapons</a>
                 <a href="/armor.html">Armor</a>
                 <a href="/codes.html">Codes</a>
@@ -199,7 +199,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
-            <p><a href="/">Home</a> | <a href="/wiki.html">Wiki</a> | <a href="/codes.html">Codes</a> | <a href="/privacy-policy.html">Privacy</a></p>
+            <p><a href="/">Home</a> | <a href="./">Wiki</a> | <a href="/codes.html">Codes</a> | <a href="/privacy-policy.html">Privacy</a></p>
         </div>
     </footer>    <!-- Advertisement -->
     <script type="text/javascript" src="//pl28203408.effectivegatecpm.com/33/6d/20/336d201ce818c2f17706b3912bfe9895.js"></script>
