--- a/wiki/races.html
+++ b/wiki/races.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚒️</text></svg>">
     <meta name="description" content="Complete guide to all 13 races in The Forge - Learn about race abilities, stats, and which race is best for your playstyle.">
     <meta name="keywords" content="the forge races, forge race guide, best race forge, race abilities, race stats, roblox forge races">
-    <link rel="canonical" href="https://forge-calculator.com/races.html">
+    <link rel="canonical" href="https://forge-calculator.com/wiki/races.html">
     <title>The Forge Races Guide - All 13 Races & Abilities</title>
     
     <!-- START: Advertisement Code - Remove if needed -->
@@ -59,9 +59,9 @@
         <div class="container">
             <h1>👤 The Forge Races</h1>
             <nav>
-                <a href="/recipes.html">Recipes</a>
+                <a href="/recipes/">Recipes</a>
                 <a href="/">Calculator</a>
-                <a href="/wiki.html">Wiki</a>
+                <a href="./">Wiki</a>
                 <a href="/weapons.html">Weapons</a>
                 <a href="/armor.html">Armor</a>
                 <a href="/codes.html">Codes</a>
@@ -378,7 +378,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
-            <p><a href="/">Home</a> | <a href="/wiki.html">Wiki</a> | <a href="/codes.html">Codes</a> | <a href="/privacy-policy.html">Privacy</a></p>
+            <p><a href="/">Home</a> | <a href="./">Wiki</a> | <a href="/codes.html">Codes</a> | <a href="/privacy-policy.html">Privacy</a></p>
         </div>
     </footer>    <!-- Advertisement -->
     <script type="text/javascript" src="//pl28203408.effectivegatecpm.com/33/6d/20/336d201ce818c2f17706b3912bfe9895.js"></script>
