--- a/codes.html
+++ b/codes.html
@@ -340,7 +340,7 @@
         </div>
 
         <div class="update-info">
-            <strong>📅 Last Updated:</strong> December 9, 2025 | <strong>⚡ Status:</strong> All The Forge codes December 2025 verified and working!
+            <strong>📅 Last Updated:</strong> December 13, 2025 | <strong>⚡ Status:</strong> All The Forge codes December 2025 verified and working!
         </div>
 
         <!-- Active Codes Section -->
@@ -349,12 +349,12 @@
             
             <div class="code-card" style="border-left: 4px solid #4caf50;">
                 <div class="code-info">
-                    <div class="code-name">FREESPINS</div>
-                    <div class="code-reward">🎁 Reward: 8x Rerolls, 1 Luck Totem</div>
+                    <div class="code-name">FORG!</div>
+                    <div class="code-reward">🎁 Reward: x10 Rerolls</div>
                     <span class="code-status status-active">✓ ACTIVE</span>
                     <span style="background: #ff9800; color: #fff; padding: 0.2rem 0.6rem; border-radius: 12px; font-size: 0.75rem; margin-left: 0.5rem; font-weight: bold;">NEW!</span>
                 </div>
-                <button class="copy-btn" onclick="copyCode('FREESPINS', event)">Copy Code</button>
+                <button class="copy-btn" onclick="copyCode('FORG!', event)">Copy Code</button>
             </div>
 
             <p style="margin-top: 1.5rem; color: #666; font-style: italic;">
@@ -374,7 +374,7 @@
                         <label style="display: block; margin-bottom: 0.5rem; font-weight: bold; color: #333;">Which code did you try?</label>
                         <select id="codeSelect" required style="width: 100%; padding: 0.8rem; border: 2px solid #ff5722; border-radius: 8px; font-size: 1rem;">
                             <option value="">Select a code...</option>
-                            <option value="FREESPINS">FREESPINS (NEW)</option>
+                            <option value="FORG!">FORG! (NEW)</option>
                         </select>
                     </div>
                     <div style="margin-bottom: 1rem;">
@@ -437,6 +437,14 @@
                 ℹ️ These Forge codes December 2025 have expired and can no longer be redeemed. Keep this page bookmarked for new The Forge codes December 2025!
             </p>
             
+            <div class="code-card" style="opacity: 0.6;">
+                <div class="code-info">
+                    <div class="code-name">FREESPINS</div>
+                    <div class="code-reward">🎁 Reward: 8x Rerolls, 1 Luck Totem</div>
+                    <span class="code-status status-expired">✗ EXPIRED</span>
+                </div>
+            </div>
+
             <div class="code-card" style="opacity: 0.6;">
                 <div class="code-info">
                     <div class="code-name">400K!</div>
