Add LaunchClash badge to homepage footer
- Added LaunchClash badge link to footer badge section
- Maintains consistent styling with other partner badges
- Badge positioned at end of partner showcase section

--- a/index.html
+++ b/index.html
@@ -759,6 +759,7 @@
                 <a href="https://starterbest.com" target="_blank" rel="noopener noreferrer"><img src="https://starterbest.com/badages-awards.svg" alt="Featured on Starter Best" style="height: 54px; width: auto;"/></a>
                 <a target="_blank" href="https://saasfield.com"><img src="https://saasfield.com/assets/images/badge.png" alt="SaaS Field" height="54"></a>
                 <a target="_blank" href="https://poweruptools.com"><img src="https://poweruptools.com/assets/images/badge.png" alt="Power Up Tools" height="54"></a>
+                <a target="_blank" href="https://launchclash.com"><img src="https://launchclash.com/static/images/badge.png" alt="LaunchClash" height="54"/></a>
             </p>
         </div>
     </footer>
