Update navigation links to use new folder structure
- Updated all navigation links to point directly to new folder structure
- /recipes.html → /recipes/
- /wiki.html → /wiki/
- /ore-guide.html → /ore/
- /blog.html → /blog/
- Removed unnecessary redirect files
- Cleaner navigation without redirects

--- a/ore/index.html
+++ b/ore/index.html
@@ -997,6 +997,6 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
-            <p><a href="/">Home</a> | <a href="/codes.html">Codes</a> | <a href="/ore-guide.html">Ore Guide</a> | <a href="/blog/">Blog</a> | <a href="/privacy-policy.html">Privacy</a> | <a href="/terms-of-service.html">Terms</a></p>
+            <p><a href="/">Home</a> | <a href="/codes.html">Codes</a> | <a href="/ore/">Ore Guide</a> | <a href="/blog/">Blog</a> | <a href="/privacy-policy.html">Privacy</a> | <a href="/terms-of-service.html">Terms</a></p>
         </div>
     <!-- Advertisement section removed for security compliance -->
