--- a/recipes/index.html
+++ b/recipes/index.html
@@ -348,7 +348,7 @@
         <div class="container">
             <h1>📖 The Forge Recipes</h1>
             <nav>
-                <a href="/recipes.html">Recipes</a>
+                <a href="/recipes/">Recipes</a>
                 <a href="/">Calculator</a>
                 <a href="/wiki/">Wiki</a>
                 <a href="/ore/">Ores</a>
@@ -879,7 +879,7 @@
     <footer></footer>
         <div class="container">
             <p>&copy; 2025 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
-            <p><a href="/">Home</a> | <a href="/codes.html">Codes</a> | <a href="/recipes.html">Recipes</a> | <a href="/ore/">Ores</a></p>
+            <p><a href="/">Home</a> | <a href="/codes.html">Codes</a> | <a href="/recipes/">Recipes</a> | <a href="/ore/">Ores</a></p>
         </div>
     </footer>
 
