--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1048,7 +1048,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Forge Calculator Wiki. Not affiliated with Roblox or The Forge developers.</p>
-            <p><a href="/">Home</a> | <a href="/wiki.html">Wiki</a> | <a href="/blog/">Blog</a> | <a href="/codes.html">Codes</a> | <a href="/privacy-policy.html">Privacy</a> | <a href="/terms-of-service.html">Terms</a></p>
+            <p><a href="/">Home</a> | <a href="/wiki/">Wiki</a> | <a href="/blog/">Blog</a> | <a href="/codes.html">Codes</a> | <a href="/privacy-policy.html">Privacy</a> | <a href="/terms-of-service.html">Terms</a></p>
         </div>
     </footer>
 
