Standardize navigation across all pages
- Unified navigation order: Calculator → Recipes → Wiki → Ores → Weapons → Armor → Codes → Feedback
- Updated 17 HTML files to use consistent navigation structure
- All pages now have identical navigation for better UX
- Improved site-wide consistency and user experience

--- a/ore/mythril.html
+++ b/ore/mythril.html
@@ -328,11 +328,11 @@
     <header>
         <div class="container">
             <h1>💜 Mythril Ore Guide</h1>
-            <nav>
-                <a href="/recipes/">Recipes</a>
+                        <nav>
                 <a href="/">Calculator</a>
+                <a href="/recipes/">Recipes</a>
                 <a href="/wiki/">Wiki</a>
-                <a href="./">Ore Guide</a>
+                <a href="/ore/">Ores</a>
                 <a href="/weapons.html">Weapons</a>
                 <a href="/armor.html">Armor</a>
                 <a href="/codes.html">Codes</a>
