--- a/wiki/gamepass.html
+++ b/wiki/gamepass.html
@@ -435,10 +435,10 @@
     <header>
         <div class="container">
             <h1>🎫 The Forge Gamepasses</h1>
-            <nav>
-                <a href="/recipes/">Recipes</a>
+                        <nav>
                 <a href="/">Calculator</a>
-                <a href="./">Wiki</a>
+                <a href="/recipes/">Recipes</a>
+                <a href="/wiki/">Wiki</a>
                 <a href="/ore/">Ores</a>
                 <a href="/weapons.html">Weapons</a>
                 <a href="/armor.html">Armor</a>
