--- a/wiki/index.html
+++ b/wiki/index.html
@@ -396,9 +396,10 @@
     <header>
         <div class="container">
             <h1>📚 The Forge Wiki</h1>
-            <nav>
-                <a href="/recipes/">Recipes</a>
+                        <nav>
                 <a href="/">Calculator</a>
+                <a href="/recipes/">Recipes</a>
+                <a href="/wiki/">Wiki</a>
                 <a href="/ore/">Ores</a>
                 <a href="/weapons.html">Weapons</a>
                 <a href="/armor.html">Armor</a>
