--- a/armor.html
+++ b/armor.html
@@ -80,14 +80,15 @@
     <header>
         <div class="container">
             <h1>🛡️ The Forge Armor</h1>
-            <nav>
-                <a href="/recipes/">Recipes</a>
+                        <nav>
                 <a href="/">Calculator</a>
+                <a href="/recipes/">Recipes</a>
                 <a href="/wiki/">Wiki</a>
+                <a href="/ore/">Ores</a>
                 <a href="/weapons.html">Weapons</a>
                 <a href="/armor.html">Armor</a>
                 <a href="/codes.html">Codes</a>
-                <a href="/ore/">Ores</a>
+                <a href="/feedback.html">Feedback</a>
             </nav>
         </div>
     </header>
