--- a/index.html
+++ b/index.html
@@ -578,6 +578,7 @@
         <div class="container">
             <h1>⚒️ Forge Calculator</h1>
             <nav>
+                <a href="/">Calculator</a>
                 <a href="/recipes/">Recipes</a>
                 <a href="/wiki/">Wiki</a>
                 <a href="/ore/">Ores</a>
