--- a/ore/index.html
+++ b/ore/index.html
@@ -324,10 +324,11 @@
     <header>
         <div class="container">
             <h1>🪨 The Forge Ore Guide</h1>
-            <nav>
-                <a href="/recipes/">Recipes</a>
+                        <nav>
                 <a href="/">Calculator</a>
+                <a href="/recipes/">Recipes</a>
                 <a href="/wiki/">Wiki</a>
+                <a href="/ore/">Ores</a>
                 <a href="/weapons.html">Weapons</a>
                 <a href="/armor.html">Armor</a>
                 <a href="/codes.html">Codes</a>
