--- a/recipes/best-recipes.html
+++ b/recipes/best-recipes.html
@@ -301,9 +301,9 @@
     <header>
         <div class="container">
             <h1>🏆 Best Forge Recipes</h1>
-            <nav>
-                <a href="./">All Recipes</a>
+                        <nav>
                 <a href="/">Calculator</a>
+                <a href="/recipes/">Recipes</a>
                 <a href="/wiki/">Wiki</a>
                 <a href="/ore/">Ores</a>
                 <a href="/weapons.html">Weapons</a>
