--- a/wiki/enemies.html
+++ b/wiki/enemies.html
@@ -53,15 +53,15 @@
     <header>
         <div class="container">
             <h1>⚔️ The Forge Enemies</h1>
-            <nav>
-                <a href="/recipes/">Recipes</a>
+                        <nav>
                 <a href="/">Calculator</a>
-                <a href="./">Wiki</a>
+                <a href="/recipes/">Recipes</a>
+                <a href="/wiki/">Wiki</a>
+                <a href="/ore/">Ores</a>
                 <a href="/weapons.html">Weapons</a>
                 <a href="/armor.html">Armor</a>
                 <a href="/codes.html">Codes</a>
-                <a href="/races.html">Races</a>
-                <a href="/npcs.html">NPCs</a>
+                <a href="/feedback.html">Feedback</a>
             </nav>
         </div>
     </header>
