--- a/wiki/races.html
+++ b/wiki/races.html
@@ -59,15 +59,15 @@
     <header>
         <div class="container">
             <h1>👤 The Forge Races</h1>
-            <nav>
-                <a href="/recipes/">Recipes</a>
+                        <nav>
                 <a href="/">Calculator</a>
-                <a href="./">Wiki</a>
+                <a href="/recipes/">Recipes</a>
+                <a href="/wiki/">Wiki</a>
+                <a href="/ore/">Ores</a>
                 <a href="/weapons.html">Weapons</a>
                 <a href="/armor.html">Armor</a>
                 <a href="/codes.html">Codes</a>
-                <a href="/enemies.html">Enemies</a>
-                <a href="/npcs.html">NPCs</a>
+                <a href="/feedback.html">Feedback</a>
             </nav>
         </div>
     </header>
