--- a/wiki/runes.html
+++ b/wiki/runes.html
@@ -366,10 +366,10 @@
     <header>
         <div class="container">
             <h1>🔮 The Forge Runes Guide</h1>
-            <nav>
-                <a href="/recipes/">Recipes</a>
+                        <nav>
                 <a href="/">Calculator</a>
-                <a href="./">Wiki</a>
+                <a href="/recipes/">Recipes</a>
+                <a href="/wiki/">Wiki</a>
                 <a href="/ore/">Ores</a>
                 <a href="/weapons.html">Weapons</a>
                 <a href="/armor.html">Armor</a>
