Update navigation to new standard order with Blog
- New navigation order: Recipes → Codes → Calculator → Ore → Wiki → Weapons → Armor → Blog → Feedback
- Added Blog link to all navigation bars
- Updated 17 HTML files with consistent navigation structure
- Improved user experience with logical navigation flow

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -347,14 +347,15 @@
     <header>
         <div class="container">
             <h1>📖 The Forge Recipes</h1>
-            <nav>
-                <a href="/">Calculator</a>
+                        <nav>
                 <a href="/recipes/">Recipes</a>
+                <a href="/codes.html">Codes</a>
+                <a href="/">Calculator</a>
+                <a href="/ore/">Ore</a>
                 <a href="/wiki/">Wiki</a>
-                <a href="/ore/">Ores</a>
                 <a href="/weapons.html">Weapons</a>
                 <a href="/armor.html">Armor</a>
-                <a href="/codes.html">Codes</a>
+                <a href="/blog/">Blog</a>
                 <a href="/feedback.html">Feedback</a>
             </nav>
         </div>
