Add new active code: 193772
- Added new code '193772' with 30x Rerolls reward
- Source: YouTube (marked with YOUTUBE badge)
- Positioned as newest code at top of active codes list
- Updated form dropdown to include new code
- Updated last modified date to December 16, 2025
- FORG! code remains active but removed NEW badge

--- a/codes.html
+++ b/codes.html
@@ -348,7 +348,7 @@
         </div>
 
         <div class="update-info">
-            <strong>📅 Last Updated:</strong> December 13, 2025 | <strong>⚡ Status:</strong> All The Forge codes December 2025 verified and working!
+            <strong>📅 Last Updated:</strong> December 16, 2025 | <strong>⚡ Status:</strong> All The Forge codes December 2025 verified and working!
         </div>
 
         <!-- Active Codes Section -->
@@ -357,10 +357,20 @@
             
             <div class="code-card" style="border-left: 4px solid #4caf50;">
                 <div class="code-info">
+                    <div class="code-name">193772</div>
+                    <div class="code-reward">🎁 Reward: 30x Rerolls</div>
+                    <span class="code-status status-active">✓ ACTIVE</span>
+                    <span style="background: #ff9800; color: #fff; padding: 0.2rem 0.6rem; border-radius: 12px; font-size: 0.75rem; margin-left: 0.5rem; font-weight: bold;">NEW!</span>
+                    <span style="background: #e91e63; color: #fff; padding: 0.2rem 0.6rem; border-radius: 12px; font-size: 0.75rem; margin-left: 0.5rem; font-weight: bold;">YOUTUBE</span>
+                </div>
+                <button class="copy-btn" onclick="copyCode('193772', event)">Copy Code</button>
+            </div>
+
+            <div class="code-card" style="border-left: 4px solid #4caf50;">
+                <div class="code-info">
                     <div class="code-name">FORG!</div>
                     <div class="code-reward">🎁 Reward: x10 Rerolls</div>
                     <span class="code-status status-active">✓ ACTIVE</span>
-                    <span style="background: #ff9800; color: #fff; padding: 0.2rem 0.6rem; border-radius: 12px; font-size: 0.75rem; margin-left: 0.5rem; font-weight: bold;">NEW!</span>
                 </div>
                 <button class="copy-btn" onclick="copyCode('FORG!', event)">Copy Code</button>
             </div>
@@ -382,7 +392,8 @@
                         <label style="display: block; margin-bottom: 0.5rem; font-weight: bold; color: #333;">Which code did you try?</label>
                         <select id="codeSelect" required style="width: 100%; padding: 0.8rem; border: 2px solid #ff5722; border-radius: 8px; font-size: 1rem;">
                             <option value="">Select a code...</option>
-                            <option value="FORG!">FORG! (NEW)</option>
+                            <option value="193772">193772 (NEW - YOUTUBE)</option>
+                            <option value="FORG!">FORG!</option>
                         </select>
                     </div>
                     <div style="margin-bottom: 1rem;">
