--- a/codes.html
+++ b/codes.html
@@ -10,6 +10,7 @@
     <!-- /Yandex.Metrika counter -->
     <!-- Favicon for better search engine compatibility -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚒️</text></svg>">
     <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚒️</text></svg>">
     <meta name="description" content="The Forge Codes December 2025 - Get free ores, coins, and rewards in The Forge Roblox game. Updated daily with working codes.">
