--- a/codes.html
+++ b/codes.html
@@ -11,8 +11,10 @@
     <!-- Favicon for better search engine compatibility -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚒️</text></svg>">
-    <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚒️</text></svg>">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="120x120" href="/favicon-120x120.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
     <meta name="description" content="The Forge Codes December 2025 - Get free ores, coins, and rewards in The Forge Roblox game. Updated daily with working codes.">
     <meta name="keywords" content="the forge codes december 2025, forge codes roblox, the forge redeem codes, roblox forge codes, forge game codes">
     <link rel="canonical" href="https://forge-calculator.com/codes.html">
