--- a/weapons.html
+++ b/weapons.html
@@ -10,8 +10,11 @@
     <!-- /Yandex.Metrika counter -->
     <!-- Favicon for better search engine compatibility -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚒️</text></svg>">
-    <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚒️</text></svg>">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="120x120" href="/favicon-120x120.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
     <meta name="description" content="The Forge Weapons Guide - Learn about all 8 weapon types in The Forge Roblox game. From Daggers to Colossal Swords.">
     <meta name="keywords" content="the forge weapons, forge weapon types, roblox forge weapons, the forge weapon guide, colossal swords, katana, daggers, great axes">
     <link rel="canonical" href="https://forge-calculator.com/weapons.html">
