Add friend link to AI神器大全 (AIShenqi.net)
- Add friend link section to all major HTML pages
- Link to https://aishenqi.net/ - comprehensive AI tools directory
- Styled with site theme colors and proper spacing
- Added to footer sections with border separator
- Includes proper SEO attributes (target=_blank, rel=noopener noreferrer)
- Supports mutual promotion and SEO benefits

--- a/wiki/runes.html
+++ b/wiki/runes.html
@@ -1117,6 +1117,15 @@
             <p>&copy; 2025 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
             <p><a href="/">Home</a> | <a href="./">Wiki</a> | <a href="/recipes/">Recipes</a> | <a href="/codes.html">Codes</a> | <a href="/privacy-policy.html">Privacy</a> | <a href="/terms-of-service.html">Terms</a></p>
         </div>
+            
+            <p style="margin: 1.5rem 0; padding: 1rem 0; border-top: 1px solid rgba(255, 87, 34, 0.3);">
+            </p>
+            
+            <!-- 友情链接 -->
+            <p style="margin: 1.5rem 0; padding: 1rem 0; border-top: 1px solid rgba(255, 87, 34, 0.3);">
+                <strong style="color: #ff9800; margin-right: 1rem;">友情链接:</strong>
+                <a href="https://aishenqi.net/" target="_blank" rel="noopener noreferrer" title="最全AI工具导航网站">AI神器大全</a>
+            </p>
     </footer>
 </body>
 </html>
