--- a/recipes/best-recipes.html
+++ b/recipes/best-recipes.html
@@ -1476,6 +1476,15 @@
             <p>&copy; 2025 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
             <p><a href="/">Home</a> | <a href="./">Recipes</a> | <a href="/codes.html">Codes</a> | <a href="/ore/">Ores</a></p>
         </div>
+            
+            <p style="margin: 1.5rem 0; padding: 1rem 0; border-top: 1px solid rgba(255, 87, 34, 0.3);">
+            </p>
+            
+            <!-- 友情链接 -->
+            <p style="margin: 1.5rem 0; padding: 1rem 0; border-top: 1px solid rgba(255, 87, 34, 0.3);">
+                <strong style="color: #ff9800; margin-right: 1rem;">友情链接:</strong>
+                <a href="https://aishenqi.net/" target="_blank" rel="noopener noreferrer" title="最全AI工具导航网站">AI神器大全</a>
+            </p>
     </footer>
 </body>
 </html>
